--- a/css/main.css
+++ b/css/main.css
@@ -316,7 +316,245 @@ html {
           box-sizing: inherit; }
 
 body {
-  color: #F9C802;
-  background: #2D2241; }
+  background-color: #8EC5FC;
+  background-image: -webkit-linear-gradient(28deg, #8EC5FC 0%, #f1eff8 50%, #ffffff 100%);
+  background-image: -o-linear-gradient(28deg, #8EC5FC 0%, #f1eff8 50%, #ffffff 100%);
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #f1eff8 50%, #ffffff 100%); }
+
+.header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
+  margin-top: 16px; }
+
+.article > .header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1; }
+
+.header__title {
+  color: #14aa46; }
+
+.main {
+  width: 100%;
+  max-width: 700px;
+  margin: 25px auto;
+  padding-top: 50px;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "header header" "about content";
+  -ms-grid-columns: 200px 1fr;
+  grid-template-columns: 200px 1fr; }
+
+.article {
+  width: 100%;
+  max-width: 800px;
+  margin: 25px auto;
+  padding-top: 50px;
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "header" "photo" "content";
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr; }
+
+.article__header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: header;
+  margin-top: 16px; }
+
+.article > .article__header {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1; }
+
+.article__header--title {
+  color: #14aa46; }
+
+.article__section {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: photo; }
+
+.article__photo {
+  width: 100%;
+  padding: 16px; }
+
+.article__content {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: content; }
+
+.article > .article__content {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1; }
+
+@media (max-width: 640px) {
+  .main {
+        grid-template-areas: "header" "content" "about";
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr; }
+  .header {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+  .article__header {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1; }
+  .article__content {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1; } }
+
+.content {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: content; }
+
+.article > .content {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1; }
+
+.about {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: about; }
+
+@media (max-width: 640px) {
+  .content {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1; }
+  .about {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1; } }
+
+.about__header {
+  color: #1460aa; }
+
+.about__paragraph {
+  color: darkblue;
+  padding: 10px;
+  overflow: hidden; }
+
+.about__image {
+  width: 100%;
+  max-width: 200px;
+  display: block;
+  float: left;
+  padding: 16px;
+  margin: 0 16px 0 16px; }
+
+.top {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  color: #1a936f;
+  text-decoration: none; }
+
+.site-header {
+  position: fixed;
+  width: 100%;
+  top: 10px;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 16px;
+  background: #fff;
+  z-index: 5; }
+
+.navigation__list {
+  list-style: none;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.navigation__item {
+  display: block;
+  margin: 0 16px; }
+
+.navigation__link {
+  color: #1460aa;
+  text-decoration: none; }
+
+.navigation__link:hover {
+  color: hotpink; }
+
+.club__header {
+  color: #1460aa; }
+
+.club-content {
+  padding: 16px; }
+
+.club-content__header {
+  color: darkcyan; }
+
+.club-content__header::before {
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #1460aa; }
+
+.club-content__header::after {
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #1460aa; }
+
+.club-content__paragraph {
+  color: darkblue;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  line-height: 24px; }
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px; }
+
+@media (max-width: 640px) {
+  .grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr; }
+  .navigation__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    display: none; }
+  .navigation__list--visible {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .navigation__item {
+    margin: 16px; }
+  .navigation__switcher {
+    border: none;
+    background: none;
+    position: absolute;
+    left: 16px;
+    top: 16px; }
+  .site-header {
+    min-height: 54px; } }
+
+@media (min-width: 641px) {
+  .navigation__switcher {
+    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
