--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,8 +12,7 @@ html {
 }
 
 body {
-  background-color: #8EC5FC;
-  background-image: linear-gradient(62deg, #8EC5FC 0%, #f1eff8 50%, #ffffff 100%);
+  background-color: #94cfc7;
   font-family: 'Literata';
 }
 
